syntax = "proto3";

package com.google.android.studio.gemini;
option java_package = "com.google.android.studio.gemini";
option java_outer_classname = "GeminiInsightsRequestProto";
option java_multiple_files = true;

// Temporary proto to get information needed to prompt Gemini for issue insights.
message GeminiInsightsRequest {
  // Device name on which the event occurred
  string device_name = 1;

  // API level on which the event occurred
  string api_level = 2;

  // Stack trace of the event
  string stack_trace = 3;
}
